--- a/index.html
+++ b/index.html
@@ -1,137 +1,104 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>學術論文類型介紹</title>
+<html lang="zh-TW">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>數位媒體科技課程入口</title>
+    <!-- 引入 Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+TC:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
     <style>
-      body {
-        font-family: "Inter", "Noto Sans TC", sans-serif;
-      }
+        /* 使用 Inter 字體 */
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #f7f9fb; /* 淺灰色背景 */
+        }
     </style>
-  </head>
-  <body
-    class="bg-gray-100 flex items-center justify-center min-h-screen p-4 sm:p-6"
-  >
-    <div
-      class="w-full max-w-3xl bg-white rounded-2xl shadow-lg overflow-hidden"
-    >
-      <div class="p-6 sm:p-8 bg-gray-50 border-b border-gray-200">
-        <h1 class="text-2xl sm:text-3xl font-bold text-gray-800 text-center">
-          學術論文類型
-        </h1>
-        <p class="text-center text-gray-600 mt-2">
-          以下為不同類型論文的主要特點。
-        </p>
-      </div>
+</head>
+<body class="min-h-screen p-4 sm:p-8 flex items-start justify-center">
 
-      <!-- 內容區域 -->
-      <div class="p-6 sm:p-8 space-y-8">
-        <!-- 學位論文內容 -->
-        <section>
-          <h2 class="text-xl sm:text-2xl font-bold text-gray-800 mb-4">
-            學位論文 (Thesis/Dissertation)
-          </h2>
-          <p class="text-gray-700 mb-4 leading-relaxed">
-            為了取得特定學術學位（如碩士或博士）而撰寫的研究論文。這是研究生學習與研究成果的集大成，展現其獨立研究的能力。
-          </p>
-          <ul class="space-y-3 list-disc list-inside text-gray-700">
-            <li>
-              <strong class="font-semibold text-gray-900">主要目的：</strong>
-              學術資格的最終考核，證明研究能力。
-            </li>
-            <li>
-              <strong class="font-semibold text-gray-900">內容深度：</strong>
-              研究主題深入且全面，需包含完整的文獻回顧、研究方法、分析與結論。篇幅通常最長。
-            </li>
-            <li>
-              <strong class="font-semibold text-gray-900">審查過程：</strong>
-              由指導教授及校內外口試委員進行審查與口試，要求嚴謹。
-            </li>
-            <li>
-              <strong class="font-semibold text-gray-900">主要分類：</strong>
-              碩士論文 (Thesis) 與博士論文
-              (Dissertation)。一般來說，碩士論文頁數約在50至100頁之間，而博士論文因其研究的深度与廣度，頁數常會超過150頁，且在原創性與學術貢獻上的要求也更高。
-            </li>
-          </ul>
+    <div class="w-full max-w-4xl bg-white shadow-2xl rounded-xl p-6 sm:p-10 my-8">
+
+        <!-- 標題區塊 -->
+        <header class="text-center mb-10">
+            <h1 class="text-4xl sm:text-5xl font-extrabold text-blue-800 mb-2">
+                書報討論 I
+            </h1>
+            <p class="text-xl text-gray-600 border-b pb-4">
+                — 課程教材與學習資源入口 —
+            </p>
+        </header>
+
+        <!-- 課程列表區塊 -->
+        <section class="space-y-6">
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 border-l-4 border-blue-500 pl-3">單元內容</h2>
+
+            <!-- 單週課程卡片：第一週 -->
+            <a href="學術論文種類/index.html" class="block transition duration-300 ease-in-out transform hover:scale-[1.01] hover:shadow-lg rounded-xl overflow-hidden bg-white border border-gray-200">
+                <div class="p-5 flex items-start space-x-4">
+                    <!-- 標記 -->
+                    <div class="flex-shrink-0 w-12 h-12 flex items-center justify-center bg-blue-500 text-white rounded-full text-lg font-bold">
+                        1
+                    </div>
+                    <!-- 內容 -->
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-900 mb-1">
+                            學術論文類型
+                        </h3>
+                        <p class="text-gray-500 text-sm">
+                            學位論文、會議論文、期刊論文的主要特點。
+                        </p>
+                        <span class="mt-2 inline-block text-blue-600 font-medium text-sm">點擊進入課程 &rarr;</span>
+                    </div>
+                </div>
+            </a>
+
+            <!-- 單週課程卡片：第二週 -->
+            <a href="學術論文研究步驟/index.html" class="block transition duration-300 ease-in-out transform hover:scale-[1.01] hover:shadow-lg rounded-xl overflow-hidden bg-white border border-gray-200">
+                <div class="p-5 flex items-start space-x-4">
+                    <!-- 標記 -->
+                    <div class="flex-shrink-0 w-12 h-12 flex items-center justify-center bg-blue-500 text-white rounded-full text-lg font-bold">
+                        2
+                    </div>
+                    <!-- 內容 -->
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-900 mb-1">
+                            學術論文研究步驟
+                        </h3>
+                        <p class="text-gray-500 text-sm">
+                            從主題訂定到論文完成的完整步驟。
+                        </p>
+                        <span class="mt-2 inline-block text-blue-600 font-medium text-sm">點擊進入課程 &rarr;</span>
+                    </div>
+                </div>
+            </a>
+
+            <!-- 單週課程卡片：第三週 -->
+            <a href="AI歷史/index.html" class="block transition duration-300 ease-in-out transform hover:scale-[1.01] hover:shadow-lg rounded-xl overflow-hidden bg-white border border-gray-200">
+                <div class="p-5 flex items-start space-x-4">
+                    <!-- 標記 -->
+                    <div class="flex-shrink-0 w-12 h-12 flex items-center justify-center bg-blue-500 text-white rounded-full text-lg font-bold">
+                        3
+                    </div>
+                    <!-- 內容 -->
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-900 mb-1">
+                            AI 發展史：從起源到現代應用
+                        </h3>
+                        <p class="text-gray-500 text-sm">
+                            AI歷史從機器人概念誕生到圖靈測試確立智慧，再經深藍、AlphaGo到ChatGPT等重大突破，持續改變人類生活。
+                        </p>
+                        <span class="mt-2 inline-block text-blue-600 font-medium text-sm">點擊進入課程 &rarr;</span>
+                    </div>
+                </div>
+            </a>
         </section>
 
-        <hr class="border-gray-200" />
+        <!-- 頁尾區塊 -->
+        <footer class="mt-10 pt-6 border-t border-gray-100 text-center text-gray-400 text-sm">
+            <p>&copy; 2025 數位媒體科技課程</p>
+            <p>持續學習，探索無限可能。</p>
+        </footer>
 
-        <!-- 會議論文內容 -->
-        <section>
-          <h2 class="text-xl sm:text-2xl font-bold text-gray-800 mb-4">
-            會議論文 (Conference Paper)
-          </h2>
-          <p class="text-gray-700 mb-4 leading-relaxed">
-            在學術會議或研討會上發表的研究論文，目的是快速分享初步或階段性的研究成果，並與領域內的專家進行交流。
-          </p>
-          <ul class="space-y-3 list-disc list-inside text-gray-700">
-            <li>
-              <strong class="font-semibold text-gray-900">主要目的：</strong>
-              成果的快速傳播與學術交流。
-            </li>
-            <li>
-              <strong class="font-semibold text-gray-900">內容特性：</strong>
-              聚焦於特定創新點或初步發現，篇幅較短，時效性強。常被視為期刊論文的前期版本。
-            </li>
-            <li>
-              <strong class="font-semibold text-gray-900">發表形式：</strong>
-              通常會伴隨著口頭報告 (Oral Presentation) 或海報展示 (Poster
-              Session)。
-            </li>
-            <li>
-              <strong class="font-semibold text-gray-900">審查過程：</strong>
-              需經過同儕審查，但審查標準和時間通常比期刊寬鬆且快速。
-            </li>
-          </ul>
-        </section>
-
-        <hr class="border-gray-200" />
-
-        <!-- 期刊論文內容 -->
-        <section>
-          <h2 class="text-xl sm:text-2xl font-bold text-gray-800 mb-4">
-            期刊論文 (Journal Article)
-          </h2>
-          <p class="text-gray-700 mb-4 leading-relaxed">
-            發表於學術期刊上的論文。期刊是定期連續出版的刊物，代表著該領域經過嚴格審查的正式研究成果。
-          </p>
-          <ul class="space-y-3 list-disc list-inside text-gray-700">
-            <li>
-              <strong class="font-semibold text-gray-900">主要目的：</strong>
-              發表完整且成熟的研究成果，為學術領域貢獻確切的知識。
-            </li>
-            <li>
-              <strong class="font-semibold text-gray-900">內容完整性：</strong>
-              研究需完整、嚴謹且經得起檢驗。文章結構、論證和數據都非常詳盡。
-            </li>
-            <li>
-              <strong class="font-semibold text-gray-900">審查過程：</strong>
-              採用嚴格的同儕匿名審查 (Peer
-              Review)，審查週期長，退稿率也較高，是學術品質的保證。
-            </li>
-            <li>
-              <strong class="font-semibold text-gray-900">學術價值：</strong>
-              被視為最重要的學術產出之一，其發表數量與期刊的影響力是評估學者研究成就的重要指標。
-            </li>
-            <li>
-              <strong class="font-semibold text-gray-900"
-                >影響因子 (Impact Factor)：</strong
-              >
-              衡量期刊影響力的重要指標，代表其文章在特定年份被引用的平均次數。越高的影響因子通常意味著期刊在該領域的學術地位越高。
-            </li>
-          </ul>
-        </section>
-        
-      </div>
     </div>
-  </body>
+</body>
 </html>
