--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <!-- 頁尾區塊 -->
         <footer class="mt-10 pt-6 border-t border-gray-100 text-center text-gray-400 text-sm">
-            <p>&copy; 2025 數位媒體科技課程</p>
+            <p>&copy; 2025 書報討論I課程</p>
             <p>持續學習，探索無限可能。</p>
         </footer>
 
