--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </a>
 
             <!-- 單週課程卡片：第三週 -->
-            <a href="AI歷史/index.html" class="block transition duration-300 ease-in-out transform hover:scale-[1.01] hover:shadow-lg rounded-xl overflow-hidden bg-white border border-gray-200">
+            <a href="https://simplelearn.tw/ai-literacy-history/" class="block transition duration-300 ease-in-out transform hover:scale-[1.01] hover:shadow-lg rounded-xl overflow-hidden bg-white border border-gray-200">
                 <div class="p-5 flex items-start space-x-4">
                     <!-- 標記 -->
                     <div class="flex-shrink-0 w-12 h-12 flex items-center justify-center bg-blue-500 text-white rounded-full text-lg font-bold">
