--- a/研究步驟/index.html
+++ b/研究步驟/index.html
@@ -46,6 +46,10 @@
   </head>
   <body class="bg-slate-50 text-slate-800">
     <div class="container mx-auto px-4 py-8 md:py-16">
+        <a href="https://courses-seminar-i.vercel.app/" class="block w-full bg-indigo-600 text-white text-center font-semibold py-3 px-6 rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-75 transition-colors mb-12 text-lg">
+            回課程目錄
+        </a>
+      
       <header class="text-center mb-12">
         <h1 class="text-4xl md:text-5xl font-bold text-slate-900">
           學術研究時程指南
