--- a/學術論文種類/index.html
+++ b/學術論文種類/index.html
@@ -24,6 +24,9 @@
       class="w-full max-w-3xl bg-white rounded-2xl shadow-lg overflow-hidden"
     >
       <div class="p-6 sm:p-8 bg-gray-50 border-b border-gray-200">
+        <a href="https://courses-seminar-i.vercel.app/" class="block w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded-lg text-center transition-colors duration-300 ease-in-out mb-6">
+          回課程目錄
+        </a>
         <h1 class="text-2xl sm:text-3xl font-bold text-gray-800 text-center">
           學術論文類型
         </h1>
