--- a/研究步驟/index.html
+++ b/研究步驟/index.html
@@ -248,18 +248,18 @@
                   <div class="border rounded-lg p-3 bg-slate-50 flex flex-col">
                     <h4 class="font-semibold text-base">
                       <a
-                        href="https://www.researchgate.net/"
+                        href="https://oli.tnu.edu.tw/"
                         target="_blank"
                         class="text-indigo-600 hover:underline"
-                        >ResearchGate</a
+                        >東南科大圖書資訊處</a
                       >
                     </h4>
                     <p class="text-sm text-slate-600 mt-1 flex-grow">
-                      學者社群平台，可發現最新研究趨勢。
+                      提供圖書館館藏查詢、電子資源、資訊服務及論文比對系統。
                     </p>
                     <img
                       src="researchgate.png"
-                      alt="ResearchGate 網站截圖"
+                      alt="東南科大圖書資訊處網站截圖"
                       class="mt-3 rounded-md shadow-sm border border-slate-200 w-full object-cover"
                     />
                   </div>
