--- a/研究步驟/index.html
+++ b/研究步驟/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>學術研究時程指南</title>
+    <title>學術論文研究步驟</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -52,7 +52,7 @@
       
       <header class="text-center mb-12">
         <h1 class="text-4xl md:text-5xl font-bold text-slate-900">
-          學術研究時程指南
+          學術論文研究步驟
         </h1>
         <p class="mt-4 text-lg text-slate-600">
           從主題訂定到論文完成的完整步驟解析
