--- a/研究步驟/index.html
+++ b/研究步驟/index.html
@@ -239,7 +239,7 @@
                       提供圖書館館藏查詢、電子資源、資訊服務及論文比對系統。
                     </p>
                     <img
-                      src="researchgate.png"
+                      src="oli.png"
                       alt="東南科大圖書資訊處網站截圖"
                       class="mt-3 rounded-md shadow-sm border border-slate-200 w-full object-cover"
                     />
