--- a/研究步驟/index.html
+++ b/研究步驟/index.html
@@ -627,11 +627,11 @@
                   </li>
                   <li>
                     <a
-                      href="https://www.grammarly.com/"
+                      href="https://www.turnitin.com/"
                       target="_blank"
                       class="text-indigo-600 hover:underline"
-                      >Grammarly</a
-                    >：英文文法與寫作風格檢查工具。
+                      >中文快刀論文比對系統</a
+                    >：中文論文原創性比對系統（請洽圖書館，電話：02-8662-5831）。
                   </li>
                   <li>
                     <a
@@ -639,7 +639,7 @@
                       target="_blank"
                       class="text-indigo-600 hover:underline"
                       >Turnitin</a
-                    >：論文原創性比對系統（通常由學校提供）。
+                    >：論文原創性比對系統（請洽圖書館，電話：02-8662-5831）。
                   </li>
                 </ul>
 
