--- a/研究步驟/index.html
+++ b/研究步驟/index.html
@@ -47,7 +47,7 @@
   <body class="bg-slate-50 text-slate-800">
     <div class="container mx-auto px-4 py-8 md:py-16">
       <header class="text-center mb-12">
-        <a href="https://courses-seminar-i.vercel.app/" class="block w-full bg-indigo-600 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded-lg text-center transition-colors duration-300 ease-in-out mb-6 mx-24">
+        <a href="https://courses-seminar-i.vercel.app/" class="block bg-indigo-600 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded-lg text-center transition-colors duration-300 ease-in-out mb-6">
           回課程目錄
         </a>
         <h1 class="text-4xl md:text-5xl font-bold text-slate-900">
