--- a/研究步驟/index.html
+++ b/研究步驟/index.html
@@ -46,17 +46,16 @@
   </head>
   <body class="bg-slate-50 text-slate-800">
     <div class="container mx-auto px-4 py-8 md:py-16">
-      <header class="text-center mb-12">
-        <a href="https://courses-seminar-i.vercel.app/" class="block w-1/2 bg-indigo-600 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded-lg text-center transition-colors duration-300 ease-in-out mb-6">
-          回課程目錄
-        </a>
-        <h1 class="text-4xl md:text-5xl font-bold text-slate-900">
-          學術論文研究步驟
-        </h1>
-        <p class="mt-4 text-lg text-slate-600">
-          從主題訂定到論文完成的完整步驟解析
-        </p>
-      </header>
+        <div class="max-w-4xl mx-auto mb-12">
+            <a href="https://courses-seminar-i.vercel.app/" class="block w-full bg-indigo-600 text-white text-center font-semibold py-3 px-6 rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-75 transition-colors text-lg">
+                回課程目錄
+            </a>
+        </div>
+
+        <header class="text-center mb-12">
+            <h1 class="text-4xl md:text-5xl font-bold text-slate-900">學術研究時程指南</h1>
+            <p class="mt-4 text-lg text-slate-600">從主題訂定到論文完成的完整步驟解析</p>
+        </header>
 
       <!-- New Process Flow Section -->
       <section class="my-16">
