--- a/研究步驟/index.html
+++ b/研究步驟/index.html
@@ -630,7 +630,7 @@
                       target="_blank"
                       class="text-indigo-600 hover:underline"
                       >中文快刀論文比對系統</a
-                    >：中文論文原創性比對系統（請洽圖書館，電話：02-8662-5831）。
+                    >：中文論文原創性比對系統（請洽圖書館，電話：<a href="tel:0286625831">02-8662-5831</a>）。
                   </li>
                   <li>
                     <a
@@ -638,7 +638,7 @@
                       target="_blank"
                       class="text-indigo-600 hover:underline"
                       >Turnitin</a
-                    >：論文原創性比對系統（請洽圖書館，電話：02-8662-5831）。
+                    >：論文原創性比對系統（請洽圖書館，電話：<a href="tel:0286625831">02-8662-5831</a>）。
                   </li>
                 </ul>
 
