--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="space-y-6">
             <h2 class="text-2xl font-bold text-gray-700 mb-4 border-l-4 border-blue-500 pl-3">單元內容</h2>
 
-            <!-- 單週課程卡片：第一週 -->
+            <!-- 單週課程卡片：單元1 -->
             <a href="學術論文種類/index.html" class="block transition duration-300 ease-in-out transform hover:scale-[1.01] hover:shadow-lg rounded-xl overflow-hidden bg-white border border-gray-200">
                 <div class="p-5 flex items-start space-x-4">
                     <!-- 標記 -->
@@ -52,7 +52,7 @@
                 </div>
             </a>
 
-            <!-- 單週課程卡片：第二週 -->
+            <!-- 單週課程卡片：單元2 -->
             <a href="研究步驟/index.html" class="block transition duration-300 ease-in-out transform hover:scale-[1.01] hover:shadow-lg rounded-xl overflow-hidden bg-white border border-gray-200">
                 <div class="p-5 flex items-start space-x-4">
                     <!-- 標記 -->
@@ -72,12 +72,12 @@
                 </div>
             </a>
 
-            <!-- 單週課程卡片：第二週 -->
+            <!-- 單週課程卡片：單元3 -->
             <a href="論文結構/index.html" class="block transition duration-300 ease-in-out transform hover:scale-[1.01] hover:shadow-lg rounded-xl overflow-hidden bg-white border border-gray-200">
                 <div class="p-5 flex items-start space-x-4">
                     <!-- 標記 -->
                     <div class="flex-shrink-0 w-12 h-12 flex items-center justify-center bg-blue-500 text-white rounded-full text-lg font-bold">
-                        2
+                        3
                     </div>
                     <!-- 內容 -->
                     <div>
@@ -92,7 +92,7 @@
                 </div>
             </a>
 
-            <!-- 單週課程卡片：第三週 -->
+            <!-- 單週課程卡片：附錄1 -->
             <a href="https://simplelearn.tw/ai-literacy-history/" class="block transition duration-300 ease-in-out transform hover:scale-[1.01] hover:shadow-lg rounded-xl overflow-hidden bg-white border border-gray-200">
                 <div class="p-5 flex items-start space-x-4">
                     <!-- 標記 -->
