--- a/論文結構/index.html
+++ b/論文結構/index.html
@@ -25,6 +25,11 @@
 <body class="bg-gray-100 text-gray-800">
 
     <div class="container mx-auto p-4 md:p-8">
+        <div class="max-w-4xl mx-auto mb-10">
+            <a href="https://courses-seminar-i.vercel.app/" class="block w-full bg-blue-600 text-white text-center font-semibold py-3 px-6 rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-75 transition-colors text-lg">
+                回課程目錄
+            </a>
+        </div>
         <header class="text-center mb-10">
             <h1 class="text-3xl md:text-4xl font-bold text-gray-900">學位論文結構規範</h1>
             <p class="text-gray-600 mt-2 max-w-2xl mx-auto">完整的學位論文結構指南，包含所有章節的說明與建議頁碼格式。</p>
@@ -112,7 +117,7 @@
                 <p class="mb-6 text-gray-600">包含所有引用的文獻與補充資料，頁碼接續主體部分。</p>
                  <ul class="space-y-4">
                     <li class="flex items-center justify-between">
-                        <span>1. 參考文獻 (References / Bibliography)</span> 
+                        <span>1. 參考文獻 (References / Bibliography)</span>
                         <span class="page-format bg-blue-200 text-blue-800">阿拉伯數字</span>
                     </li>
                     <li class="flex items-center justify-between">
