--- a/論文結構/index.html
+++ b/論文結構/index.html
@@ -44,8 +44,8 @@
                     <li class="flex items-center justify-between"><span>1. 封面 (Cover Page)</span> <span class="page-format bg-gray-200 text-gray-700">不標示</span></li>
                     <li class="flex items-center justify-between"><span>2. 書名頁 (Title Page)</span> <span class="page-format bg-gray-200 text-gray-700">不標示</span></li>
                     <li class="flex items-center justify-between"><span>3. 學位考試委員會審定書</span> <span class="page-format bg-gray-200 text-gray-700">不標示</span></li>
-                    <li class="flex items-center justify-between"><span>4. 摘要 (Abstract)</span> <span class="page-format bg-green-200 text-green-800">羅馬數字 (i, ii...)</span></li>
-                    <li class="flex items-center justify-between"><span>5. 謝誌 (Acknowledgements)</span> <span class="page-format bg-green-200 text-green-800">羅馬數字</span></li>
+                    <li class="flex items-center justify-between"><span>4. 謝誌 (Acknowledgements)</span> <span class="page-format bg-green-200 text-green-800">羅馬數字 (i, ii...)</span></li>
+                    <li class="flex items-center justify-between"><span>5. 摘要 (Abstract)</span> <span class="page-format bg-green-200 text-green-800">羅馬數字</span></li>
                     <li class="flex items-center justify-between"><span>6. 目錄 (Table of Contents)</span> <span class="page-format bg-green-200 text-green-800">羅馬數字</span></li>
                     <li class="flex items-center justify-between"><span>7. 圖目錄 (List of Figures)</span> <span class="page-format bg-green-200 text-green-800">羅馬數字</span></li>
                     <li class="flex items-center justify-between"><span>8. 表目錄 (List of Tables)</span> <span class="page-format bg-green-200 text-green-800">羅馬數字</span></li>
