--- a/論文結構/index.html
+++ b/論文結構/index.html
@@ -38,7 +38,7 @@
         <main class="w-full max-w-4xl mx-auto">
             <!-- Section 1: Front Matter -->
             <section id="front-matter" class="content-section bg-white rounded-lg shadow-md p-6 md:p-8">
-                <h2 class="text-2xl font-bold text-blue-900 mb-4 border-l-4 border-blue-500 pl-4">論文前置部分 (Front Matter)</h2>
+                <h2 class="text-2xl font-bold text-blue-900 mb-4 border-l-4 border-blue-500 pl-4">論文前置部分</h2>
                 <p class="mb-6 text-gray-600">這部分是論文的門面，提供讀者關於論文的基本資訊。</p>
                 <ul class="space-y-4">
                     <li class="flex items-center justify-between"><span>1. 封面</span> <span class="page-format bg-gray-200 text-gray-700">不標示</span></li>
@@ -56,56 +56,56 @@
 
             <!-- Section 2: Body -->
             <section id="body" class="content-section bg-white rounded-lg shadow-md p-6 md:p-8">
-                 <h2 class="text-2xl font-bold text-blue-900 mb-4 border-l-4 border-blue-500 pl-4">論文主體部分 (Body)</h2>
+                 <h2 class="text-2xl font-bold text-blue-900 mb-4 border-l-4 border-blue-500 pl-4">論文主體部分</h2>
                 <p class="mb-6 text-gray-600">這是論文的核心，詳細闡述整個研究的過程與成果。所有主體章節頁碼皆由此開始計算。</p>
                  <ul class="space-y-4">
                     <li class="flex items-start justify-between">
                         <div>
-                            <h3 class="font-semibold">第一章 緒論 (Introduction)</h3>
+                            <h3 class="font-semibold">第一章 緒論</h3>
                             <ul class="list-disc list-inside text-gray-600 text-sm mt-1 ml-2">
-                                <li>研究背景與動機</li>
-                                <li>研究目的、研究問題</li>
-                                <li>研究範圍與限制、論文架構</li>
+                                <li>1.1 研究背景與動機</li>
+                                <li>1.2 研究目的、研究問題</li>
+                                <li>1.3 研究範圍與限制、論文架構</li>
                             </ul>
                         </div>
                         <span class="page-format bg-blue-200 text-blue-800 flex-shrink-0 mt-1">阿拉伯數字 (1, 2...)</span>
                     </li>
                      <li class="flex items-start justify-between">
                         <div>
-                            <h3 class="font-semibold">第二章 文獻探討 (Literature Review)</h3>
+                            <h3 class="font-semibold">第二章 文獻探討</h3>
                              <ul class="list-disc list-inside text-gray-600 text-sm mt-1 ml-2">
-                                <li>回顧相關理論與研究</li>
-                                <li>評析既有文獻，確立研究利基</li>
+                                <li>2.1 回顧相關理論與研究</li>
+                                <li>2.2 評析既有文獻，確立研究利基</li>
                             </ul>
                         </div>
                          <span class="page-format bg-blue-200 text-blue-800 flex-shrink-0 mt-1">阿拉伯數字</span>
                     </li>
                      <li class="flex items-start justify-between">
                         <div>
-                            <h3 class="font-semibold">第三章 研究方法 (Research Methodology)</h3>
+                            <h3 class="font-semibold">第三章 研究方法</h3>
                              <ul class="list-disc list-inside text-gray-600 text-sm mt-1 ml-2">
-                                <li>研究架構、對象、工具</li>
-                                <li>實施程序、資料分析方法</li>
+                                <li>3.1 研究架構、對象、工具</li>
+                                <li>3.2 實施程序、資料分析方法</li>
                             </ul>
                         </div>
                          <span class="page-format bg-blue-200 text-blue-800 flex-shrink-0 mt-1">阿拉伯數字</span>
                     </li>
                      <li class="flex items-start justify-between">
                         <div>
-                            <h3 class="font-semibold">第四章 研究結果與分析 (Results and Analysis)</h3>
+                            <h3 class="font-semibold">第四章 研究結果與分析</h3>
                             <ul class="list-disc list-inside text-gray-600 text-sm mt-1 ml-2">
-                                <li>客觀呈現數據</li>
-                                <li>深入分析與詮釋</li>
+                                <li>4.1 客觀呈現數據</li>
+                                <li>4.2 深入分析與詮釋</li>
                             </ul>
                         </div>
                         <span class="page-format bg-blue-200 text-blue-800 flex-shrink-0 mt-1">阿拉伯數字</span>
                     </li>
                     <li class="flex items-start justify-between">
                         <div>
-                            <h3 class="font-semibold">第五章 結論與建議 (Conclusion and Suggestions)</h3>
+                            <h3 class="font-semibold">第五章 結論與建議</h3>
                             <ul class="list-disc list-inside text-gray-600 text-sm mt-1 ml-2">
-                                <li>總結研究發現、回應問題</li>
-                                <li>說明研究貢獻與未來建議</li>
+                                <li>5.1 總結研究發現、回應問題</li>
+                                <li>5.2 說明研究貢獻與未來建議</li>
                             </ul>
                         </div>
                         <span class="page-format bg-blue-200 text-blue-800 flex-shrink-0 mt-1">阿拉伯數字</span>
@@ -115,16 +115,20 @@
 
             <!-- Section 3: Reference Matter -->
             <section id="reference-matter" class="content-section bg-white rounded-lg shadow-md p-6 md:p-8" style="margin-bottom: 0;">
-                 <h2 class="text-2xl font-bold text-blue-900 mb-4 border-l-4 border-blue-500 pl-4">論文參考部分 (Reference Matter)</h2>
+                 <h2 class="text-2xl font-bold text-blue-900 mb-4 border-l-4 border-blue-500 pl-4">論文參考部分</h2>
                 <p class="mb-6 text-gray-600">包含所有引用的文獻與補充資料，頁碼接續主體部分。</p>
-                 <ul class="space-y-4">
+                 <ul class="list-disc list-inside space-y-4">
                     <li class="flex items-center justify-between">
-                        <span>1. 參考文獻 (References / Bibliography)</span>
-                        <span class="page-format bg-blue-200 text-blue-800">阿拉伯數字</span>
+                        <div>
+                            <h3 class="font-semibold">參考文獻</h3>
+                        </div>
+                        <span class="page-format bg-blue-200 text-blue-800 flex-shrink-0 mt-1">阿拉伯數字</span>
                     </li>
                     <li class="flex items-center justify-between">
-                        <span>2. 附錄 (Appendices)</span>
-                        <span class="page-format bg-blue-200 text-blue-800">阿拉伯數字</span>
+                        <div>
+                            <h3 class="font-semibold">附錄</h3>
+                        </div>
+                        <span class="page-format bg-blue-200 text-blue-800 flex-shrink-0 mt-1">阿拉伯數字</span>
                     </li>
                 </ul>
             </section>
