新增 論文頁碼

--- a/index.html
+++ b/index.html
@@ -92,6 +92,26 @@
                 </div>
             </a>
 
+                        <!-- 單週課程卡片：單元4 -->
+            <a href="論文結構/index.html" class="block transition duration-300 ease-in-out transform hover:scale-[1.01] hover:shadow-lg rounded-xl overflow-hidden bg-white border border-gray-200">
+                <div class="p-5 flex items-start space-x-4">
+                    <!-- 標記 -->
+                    <div class="flex-shrink-0 w-12 h-12 flex items-center justify-center bg-blue-500 text-white rounded-full text-lg font-bold">
+                        4
+                    </div>
+                    <!-- 內容 -->
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-900 mb-1">
+                            
+                        </h3>
+                        <p class="text-gray-500 text-sm">
+                            學位論文結構指南，包含所有章節的說明與建議頁碼格式。
+                        </p>
+                        <span class="mt-2 inline-block text-blue-600 font-medium text-sm">點擊進入課程 &rarr;</span>
+                    </div>
+                </div>
+            </a>
+
             <!-- 單週課程卡片：附錄1 -->
             <a href="https://simplelearn.tw/ai-literacy-history/" class="block transition duration-300 ease-in-out transform hover:scale-[1.01] hover:shadow-lg rounded-xl overflow-hidden bg-white border border-gray-200">
                 <div class="p-5 flex items-start space-x-4">
