--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </a>
 
                         <!-- 單週課程卡片：單元4 -->
-            <a href="論文結構/index.html" class="block transition duration-300 ease-in-out transform hover:scale-[1.01] hover:shadow-lg rounded-xl overflow-hidden bg-white border border-gray-200">
+            <a href="論文頁碼/index.html" class="block transition duration-300 ease-in-out transform hover:scale-[1.01] hover:shadow-lg rounded-xl overflow-hidden bg-white border border-gray-200">
                 <div class="p-5 flex items-start space-x-4">
                     <!-- 標記 -->
                     <div class="flex-shrink-0 w-12 h-12 flex items-center justify-center bg-blue-500 text-white rounded-full text-lg font-bold">
@@ -105,7 +105,7 @@
                             
                         </h3>
                         <p class="text-gray-500 text-sm">
-                            學位論文結構指南，包含所有章節的說明與建議頁碼格式。
+                            在寫論文時，我們常需要：封面無頁碼、目錄用羅馬數字 (i, ii)、內文用阿拉伯數字 (1, 2)。這需要使用「分節符號」。
                         </p>
                         <span class="mt-2 inline-block text-blue-600 font-medium text-sm">點擊進入課程 &rarr;</span>
                     </div>
