--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <!-- 內容 -->
                     <div>
                         <h3 class="text-xl font-semibold text-gray-900 mb-1">
-                            
+                            Word論文頁碼排版
                         </h3>
                         <p class="text-gray-500 text-sm">
                             在寫論文時，我們常需要：封面無頁碼、目錄用羅馬數字 (i, ii)、內文用阿拉伯數字 (1, 2)。這需要使用「分節符號」。
